added axios interceptor to verify user on api request, added useAdmin hook using tanstack to check admin

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,6 @@
 a.active{
     color: #198298 !important;
     font-weight: bolder;
-    text-decoration: underline;
+    text-decoration: underline !important;
     background-color: transparent !important;
 }
