added theme toggling system with neccessary changes of colors

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,15 @@
-a.active{
+li > a.active{
     color: #198298 !important;
     font-weight: bolder;
     text-decoration: underline !important;
+    background-color: transparent !important;
+}
+
+li > a:hover{
+    color: #198298 !important;
+    background-color: transparent !important;
+}
+
+.dropBtn:active{
     background-color: transparent !important;
 }
