added about us page, update links on navbar and footer

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.about{
+    width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
